--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ section .basic-items-container {
     width: 100%;
     padding: 3rem 1.5rem; 
     display: grid; 
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); 
     grid-auto-rows: max(350px, 45vh); 
     gap: 2rem; 
 }
@@ -81,7 +81,8 @@ section .basic-item {
 
 section .new-tag, 
 section .brand-new-tag, 
-section .status-tag {
+section .status-tag, 
+section .sold-tag {
     position: absolute; 
     top: 4%; 
     font-size: 1rem; 
@@ -104,6 +105,11 @@ section .brand-new-tag {
 section .status-tag {
     right: 4%; 
     background-color: #f5222d;
+}
+
+section .sold-tag {
+    right: 4%; 
+    background-color: #08979c;
 }
 
 section .basic-item .basic-img-container {
@@ -138,7 +144,7 @@ section .basic-item .basic-item-description {
 }
 
 section .basic-item  .basic-item-title {
-    font-size: 1.8rem; 
+    font-size: 1.7rem; 
     font-weight: 600;
 }
 
@@ -231,6 +237,10 @@ section .basic-item:hover .buy-icon {
     cursor: pointer; 
 }
 
+.header .header-top .header-icons .navbar-icon {
+    display: none;
+} 
+
 .header .header-top .header-icons span {
     font-size: 3rem;
     padding-left: 2rem; 
@@ -286,6 +296,7 @@ section .basic-item:hover .buy-icon {
 /* Featured Section */
 .featured .featured-content {
     width: 100%;
+    min-height: 475px; 
     flex-grow: 1; 
     display: flex;
     flex-direction: column;
@@ -307,20 +318,20 @@ section .basic-item:hover .buy-icon {
     align-self: flex-start; 
     color: black; 
     position: absolute; 
-    top: 48%; 
+    top: 50%; 
     transform: translateY(-50%);
 }
 
 .featured .featured-content .featured-item {
-    width: min(250px, 18vw); 
+    width: min(300px, 20vw); 
     height: max(350px, 45vh); 
     padding-bottom: 0.5rem; 
     margin-right: 2.2rem; 
     border-radius: 1rem; 
     text-align: center;
     position: relative; 
-    background-color: var(--text-color); 
-    border-left: 5px solid black; 
+    background-color: white; 
+    border-right: 5px solid black; 
     border-bottom: 5px solid black; 
     animation: GlowingFeaturedItems 2s linear infinite alternate;
     transition: all 0.3s ease; 
@@ -642,15 +653,126 @@ footer{
     font-size: 1.5rem;
     font-family: "Ubuntu", sans-serif;
 }
-footer #laptop a{
+footer #laptop span {
     color: var(--purple-color4); 
 }
 
-footer #laptop a:hover {
+footer #laptop span:hover {
     text-decoration: underline;
     cursor: pointer;
 }
 
 footer #phone {
     display: none;
+}
+
+
+
+
+
+
+
+@media (max-width:1300px) {
+    html {
+        font-size: 60%; 
+    }
+}
+
+@media (max-width:1150px) {
+    html {
+        font-size: 55%; 
+    }
+}
+
+@media (max-width:1000px) {
+    :root {
+        --side-padding: 5%; 
+    }
+
+    html {
+        font-size: 50%; 
+    }
+}
+
+@media (max-width:800px), (orientation: portrait) {
+    :root {
+        --side-padding: 7%; 
+        --navbar-height: 165px; 
+    }
+
+    .header .header-top-mid {
+        padding: 5px var(--side-padding) 15px; 
+    }
+
+    .header .header-mid .navbar-menu {
+        width: 100vw; 
+        height: 100vh; 
+        padding: 5rem 2rem 6rem; 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        position: fixed;
+        top: 0; 
+        left: -100vw; 
+        background-color: black;
+        transition: all 0.3s ease; 
+        transition-delay: 0.3s; 
+        z-index: 99; 
+    }
+
+    .header .header-mid .navbar-menu.active {
+        left: 50%; 
+        transform: translate(-50%);
+    }
+
+    .header .navbar-menu.active .navbar-item {
+        margin: 0; 
+    }
+
+    .header .header-top .header-icons .navbar-icon {
+        display: initial;
+    }
+
+    .featured .featured-content .featured-item {
+        width: min(225px, 60vw); 
+    }
+
+    .contact .contact-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .contact .contact-content .column-left {
+        width: 100%; 
+        height: 30rem;
+        padding-right: 0; 
+        padding-bottom: 3rem; 
+        justify-content: space-evenly;
+    }
+
+    .contact .contact-content .column-right {
+        width: 100%; 
+        height: 35rem; 
+        margin: 0;
+        padding: 0;
+       
+    }
+
+    .contact .column-right form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        align-items: flex-start;
+    }
+
+    .contact .contact-content .column-right .btn {
+        margin-top: 1rem; 
+        align-self: center;
+    }
+
+
+
 }
