--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ section .basic-items-container {
     width: 100%;
     padding: 3rem 1.5rem; 
     display: grid; 
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); 
+    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr)); 
     grid-auto-rows: max(350px, 45vh); 
     gap: 2rem; 
 }
@@ -77,6 +77,10 @@ section .basic-item {
     background-color: white;
     overflow: hidden;
     border: 5px solid var(--purple-color3); 
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 section .new-tag, 
@@ -85,8 +89,11 @@ section .status-tag,
 section .sold-tag {
     position: absolute; 
     top: 4%; 
-    font-size: 1rem; 
+    font-size: 1.2rem; 
+    font-weight: 500;
+    font-style: italic;
     padding: 0.5rem; 
+    padding-right: 0.7rem; 
     border-radius: 0.25rem;
     color: var(--text-color); 
     z-index: 5; 
@@ -114,12 +121,12 @@ section .sold-tag {
 
 section .basic-item .basic-img-container {
     width: 100%; 
-    height: 70%; 
+    height: 72%; 
     padding: 1rem; 
     border-top-left-radius: 1rem; 
     border-top-right-radius: 1rem; 
     border-bottom: 3px solid black; 
-    margin-bottom: 1.5rem; 
+    margin-bottom: 0.5rem; 
 }
 
 section .basic-item img {
@@ -135,11 +142,12 @@ section .basic-item:hover img {
 }
 
 section .basic-item .basic-item-description {
-    height: 22.5%; 
+    height: 20%; 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
     color: black; 
 }
 
@@ -159,6 +167,7 @@ section .basic-item .basic-item-price-container {
     justify-content: center;
     align-items: center;
     gap: 0.5rem; 
+    margin-bottom: 0.5rem; 
 }
 
 section .basic-item .discount-price {
@@ -205,7 +214,7 @@ section .basic-item:hover .buy-icon {
     align-items: center;
     position: fixed;
     top: 0; 
-    z-index: 99;
+    z-index: 100;
     color: var(--text-color); 
     background: linear-gradient(black, var(--purple-color5));
     border-bottom: 2px solid var(--purple-color5); 
@@ -238,6 +247,8 @@ section .basic-item:hover .buy-icon {
 }
 
 .header .header-top .header-icons .navbar-icon {
+    font-size: 3rem;
+    cursor: pointer;
     display: none;
 } 
 
@@ -256,7 +267,7 @@ section .basic-item:hover .buy-icon {
     justify-content: center;
     align-items: center;
     gap: 5rem; 
-    margin: 2rem 0  1.5rem; 
+    margin: 2rem 0 1.5rem; 
 }
 
 .header .header-mid .navbar-item {
@@ -679,6 +690,7 @@ footer #phone {
 }
 
 @media (max-width:1150px) {
+
     html {
         font-size: 55%; 
     }
@@ -692,12 +704,26 @@ footer #phone {
     html {
         font-size: 50%; 
     }
+
+    .featured .featured-content .featured-item {
+        width: min(275px, 25vw); 
+    }
+}
+
+@media (max-height:700px) {
+    .header .header-top .logo {
+        width: 90px; 
+        height: 90px; 
+    }
 }
 
 @media (max-width:800px), (orientation: portrait) {
     :root {
         --side-padding: 7%; 
-        --navbar-height: 165px; 
+    }
+
+    html {
+        font-size: 62.5%;
     }
 
     .header .header-top-mid {
@@ -707,6 +733,7 @@ footer #phone {
     .header .header-mid .navbar-menu {
         width: 100vw; 
         height: 100vh; 
+        margin: 0; 
         padding: 5rem 2rem 6rem; 
         display: flex;
         flex-direction: column;
@@ -718,7 +745,7 @@ footer #phone {
         background-color: black;
         transition: all 0.3s ease; 
         transition-delay: 0.3s; 
-        z-index: 99; 
+        z-index: 150; 
     }
 
     .header .header-mid .navbar-menu.active {
@@ -731,11 +758,14 @@ footer #phone {
     }
 
     .header .header-top .header-icons .navbar-icon {
-        display: initial;
+        padding: 0; 
+        display: inline-block;
+        position: relative;
+        z-index: 999; 
     }
 
     .featured .featured-content .featured-item {
-        width: min(225px, 60vw); 
+        width: min(275px, 60vw); 
     }
 
     .contact .contact-content {
@@ -749,7 +779,7 @@ footer #phone {
         width: 100%; 
         height: 30rem;
         padding-right: 0; 
-        padding-bottom: 3rem; 
+        margin-bottom: 3rem; 
         justify-content: space-evenly;
     }
 
@@ -758,7 +788,6 @@ footer #phone {
         height: 35rem; 
         margin: 0;
         padding: 0;
-       
     }
 
     .contact .column-right form {
@@ -772,7 +801,53 @@ footer #phone {
         margin-top: 1rem; 
         align-self: center;
     }
+}
 
+@media (max-width: 650px) {
+    :root {
+        --side-padding: 5%; 
+        --footer-height: 80px; 
+    }
 
+    html {
+        font-size: clamp(7.5px, 1vmax, 10px); 
+    }
+
+    .header .header-top .header-title {
+        display: none;
+    }
+
+    footer {
+        line-height: 175%;
+    }
+
+    footer #phone {
+        display: inline;
+    }
+
+    footer #phone span {
+        color: var(--purple-color4); 
+    }
+
+    footer #phone span:hover {
+        cursor: pointer;
+    }
+    footer #laptop {
+        display: none;
+    }
+}
+
+@media (max-width: 430px) {
+    .header .header-top .logo {
+        width: 90px; 
+        height: 90px; 
+    }
+
+    .shop .shop-content .shop-item {
+        width: min(220px, 60vw); 
+    }
+}
+
+@media (max-width: 375px) {
 
 }
