--- a/style.css
+++ b/style.css
@@ -65,8 +65,8 @@ section .basic-items-container {
     width: 100%;
     padding: 3rem 1.5rem; 
     display: grid; 
-    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr)); 
-    grid-auto-rows: max(350px, 45vh); 
+    grid-template-columns: repeat(auto-fill, minmax(23rem, 1fr)); 
+    grid-auto-rows: max(35rem, 45vh); 
     gap: 2rem; 
 }
 
@@ -723,7 +723,7 @@ footer #phone {
     }
 
     html {
-        font-size: 62.5%;
+        font-size: 55%;
     }
 
     .header .header-top-mid {
@@ -810,7 +810,7 @@ footer #phone {
     }
 
     html {
-        font-size: clamp(7.5px, 1vmax, 10px); 
+        font-size: clamp(7px, 1vmax, 10px); 
     }
 
     .header .header-top .header-title {
