--- a/style.css
+++ b/style.css
@@ -681,7 +681,53 @@ footer #phone {
 
 
 
+/* Responsive Media Query */
+@media (min-width:1600px) {
+    html {
+        font-size: 70%; 
+    }
+}
 
+@media (min-width:1800px) {
+    :root {
+        --footer-height: 100px;
+    }
+
+    html {
+        font-size: 80%; 
+    }
+
+    .header .header-top .logo {
+        width: 155px; 
+        height: 155px; 
+    }
+
+
+    .shop .shop-content .shop-item {
+        width: max(300px, 20vw); 
+    }
+}
+
+@media (min-width:2000px) {
+    html {
+        font-size: 90%; 
+    }
+}
+
+@media (min-width:2200px) {
+    :root {
+        --footer-height: 150px;
+    }
+
+    html {
+        font-size: 100%; 
+    }
+
+    .header .header-top .logo {
+        width: 190px; 
+        height: 190px; 
+    }
+}
 
 @media (max-width:1300px) {
     html {
