--- a/style.css
+++ b/style.css
@@ -780,7 +780,7 @@ footer #phone {
         width: 100vw; 
         height: 100vh; 
         margin: 0; 
-        padding: 50px 20px 60px; 
+        padding: 10rem 2rem 20rem; 
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
