--- a/style.css
+++ b/style.css
@@ -282,16 +282,73 @@ section .basic-item:hover .buy-icon {
 }
 
 .header .header-btm {
-    width: 100vw; 
-    background-color: var(--text-color);
-    box-shadow: 0 0px 3rem 1rem var(--purple-color5); 
+    width: 100vw;     
+    background-color: white; 
+    box-shadow: 0 0px 2rem 1rem var(--purple-color5); 
 }
 
-.header .header-btm p {
-    font-size: 1.5rem; 
+.header .header-btm.slider {
+    height: 4rem;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.header .header-btm.slider p {
+    width: 100vw; 
+    font-size: 1.35rem; 
     padding: 0.5rem; 
     color: black; 
     text-align: center;
+    position: absolute;
+    animation: Announcement 32s linear infinite; 
+}
+
+.header .header-btm.slider p:nth-of-type(1) {
+    left: 0; 
+}
+
+.header .header-btm.slider p:nth-of-type(2) {
+    left: 100%; 
+}
+
+.header .header-btm.slider p:nth-of-type(3) {
+    left: 200%; 
+}
+
+.header .header-btm.slider p:nth-of-type(4) {
+    left: 300%; 
+}
+
+@keyframes Announcement {
+    0% {
+        transform: translate(0); 
+    }
+    24.6% {
+        transform: translate(0); 
+    }
+    25% {
+        transform: translate(-100%); 
+    }
+    49.6% {
+        transform: translate(-100%); 
+    }
+    50% {
+        transform: translate(-200%); 
+    }
+    74.6% {
+        transform: translate(-200%); 
+    }
+    75% {
+        transform: translate(-300%); 
+    }
+    99.6% {
+        transform: translate(-300%); 
+    }
+    100% {
+        transform: translate(0); 
+    }
 }
 
 .header img {
@@ -464,7 +521,6 @@ section .basic-item:hover .buy-icon {
     color: var(--purple-color2); 
     background: var(--main-bg-color);
 }
-
 
 
 
@@ -664,6 +720,7 @@ footer{
     font-size: 1.5rem;
     font-family: "Ubuntu", sans-serif;
 }
+
 footer #laptop span {
     color: var(--purple-color4); 
 }
@@ -702,7 +759,6 @@ footer #phone {
         height: 155px; 
     }
 
-
     .shop .shop-content .shop-item {
         width: max(300px, 20vw); 
     }
@@ -736,7 +792,6 @@ footer #phone {
 }
 
 @media (max-width:1150px) {
-
     html {
         font-size: 55%; 
     }
